syntax = "proto3";
package sf.v5;

import "google/protobuf/struct.proto";

message Crs {
  // EPSG code (e.g., 4326). 0 = unknown/unspecified.
  uint32 srid = 1;

  // Quantization scale factor:
  // real = int_value / scale
  uint32 scale = 2;
}

message Coordinate {
  // Quantized integer coordinate (scaled)
  sint32 x = 1;
  sint32 y = 2;
}

message Point { Coordinate coord = 1; }
message MultiPoint { repeated Point points = 1; }

/**
 * Delta-encoded LineString.
 * points[0] = start
 * points[i] = previous + (dx[i-1], dy[i-1]) for i>=1
 */
message DeltaLineString {
    Coordinate start = 1;
    repeated sint32 dx = 2;
    repeated sint32 dy = 3; }

message DeltaRing {
    Coordinate start = 1;
    repeated sint32 dx = 2;
    repeated sint32 dy = 3; }

message Polygon {
  repeated DeltaRing rings = 1;   // [outer, hole1, hole2, ...]
}

message MultiLineString {
  repeated DeltaLineString line_strings = 1;
}

message MultiPolygon {
  repeated Polygon polygons = 1;
}

message Geometry {
  Crs crs = 1;

  oneof geom {
    Point point = 10;
    DeltaLineString line_string = 11;
    Polygon polygon = 12;
    MultiPolygon multipolygon = 13;
    MultiLineString multilinestring = 14;
    MultiPoint multipoint = 15;
  }
}

/** NEW in v5: Feature wrapper with attributes */
message Feature {
  Geometry geometry = 1;
  google.protobuf.Struct properties = 2; // GeoJSON Feature.properties
      string id = 3;
    repeated double bbox = 4;
    google.protobuf.Struct extra = 5;
}

message FeatureCollection {
  // GeoJSON FeatureCollection.features
  repeated Feature features = 1;
  // GeoJSON FeatureCollection.bbox (optional)
  repeated double bbox = 2;
  // Any other top-level keys outside {type, features, bbox, name, crs}
  google.protobuf.Struct extra = 3;
  // GeoJSON FeatureCollection.name (optional)
  string name = 4;
  // Collection CRS (optional)
  Crs crs = 5;
}
